No need to refresh iterators after commit

Turns out Mongo's contract is to always reacquire the snapshot after
commit/abort. The failure to do so in background index build is a bug.
This means that we don't need to refresh the iterators manually in our
RocksRecoveryUnit. The bug is filed as
https://jira.mongodb.org/browse/SERVER-18844