src/rocks_recovery_unit.h
@@ -71,10 +71,6 @@ namespace mongo {
         // This Seek is specific because it will succeed only if it finds a key with `target`
         // prefix. If there is no such key, it will be !Valid()
         virtual void SeekPrefix(const rocksdb::Slice& target) = 0;
-
-        virtual rocksdb::Slice* GetUpperBound() = 0;
-
-        virtual void Refresh(rocksdb::Iterator* newBaseIterator) = 0;
     };
 
     class OperationContext;
@@ -174,8 +170,6 @@ namespace mongo {
         uint64_t _myTransactionCount;
 
         RecordId _oplogReadTill;
-
-        std::set<RocksIterator*> _liveIterators;
 
         static std::atomic<int> _totalLiveRecoveryUnits;
     };
